- improved ci/cd configuration to store artifacts on fail and set coverage limits - added installation section into README.md

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,6 +32,7 @@ jobs:
       - store_artifacts:
           path: coverage
           prefix: code-coverage
+          when: always
   publish-build:
     docker:
       - image: circleci/node:8.9.4
